@@ -31,6 +31,7 @@ NORETURN(void rb_assert_failure(const char *, int, const char *, const char *));
     RUBY_ASSERT_MESG(!(cond) || (expr), mesg)
 #endif
 #define RUBY_ASSERT(expr) RUBY_ASSERT_MESG_WHEN(!RUBY_NDEBUG+0, expr, #expr)
+#define RUBY_ASSERT_WHEN(cond, expr) RUBY_ASSERT_WHEN_0(cond, expr, #expr)
 
 #undef assert
 #define assert RUBY_ASSERT
